--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,7 +74,7 @@
     }
 }
 
-/******************************* BASE **********************************/
+/******************************* Base **********************************/
 *{
     box-sizing: border-box;
     padding: 0; 
@@ -119,7 +119,7 @@ img {
     height: auto;
 }
 
-/***************************** MODE SETTINS ****************************/
+/***************************** Mode settings ****************************/
 .nav__buttons {
     display: flex; 
     align-items: center; 
@@ -189,7 +189,7 @@ body.dark-mode {
     background-color: hsl(207, 4%, 35%);
 }
 
-/********************** REUSABLE CSS CLASSES ***************************/
+/********************** Reusable CSS classes ***************************/
 .container {
     max-width: 1024px;
     margin-inline: 1.5rem;
@@ -231,7 +231,7 @@ body.dark-mode {
     overflow: hidden;  /* For animations */ 
 }
 
-/********************* HEADER & NAVIGATION BAR ************************/
+/********************* Header & Navigation bar ************************/
 .header {
     width: 100%; 
     position: fixed;
@@ -353,7 +353,7 @@ body.dark-mode {
     font-weight: var(--font-medium);
 }
 
-/*********************************** HOME ******************************/
+/*********************************** Home ******************************/
 .home__container {
     row-gap: 4rem;
     padding-top: 1rem;
@@ -735,7 +735,7 @@ body.dark-mode {
 }
 
 
-/*************************** PROJECTS SECTION **************************/
+/*************************** Project Section **************************/
 .projects__container {
     overflow: initial;
 }
@@ -827,7 +827,7 @@ body.dark-mode {
 }
 
 
-/***************************** SKILLS SECTION **************************/
+/***************************** Skills Section **************************/
 .skills__container {
     row-gap: 3.5rem;
     text-align: center;
@@ -923,7 +923,7 @@ body.dark-mode {
 }
 
 
-/*************************** SERVICES SECION ***************************/
+/*************************** Services Section ***************************/
 .services__container {
     display: flex; 
     flex-wrap: wrap;
@@ -1043,7 +1043,7 @@ body.dark-mode {
 }
 
 
-/************************** CREDENTIALS SECTION ************************/
+/************************** Credentials Section ************************/
 .credentials__tabs {
     display: flex; 
     justify-content: space-evenly;
@@ -1074,11 +1074,11 @@ body.dark-mode {
     column-gap: 2.5rem;
 }
 
-.credentials__info-left {
+.credentials__data:nth-child(1) {
     margin-left: 3rem;
 }
 
-.credentials__info-right {
+.credentials__data:nth-child(3) {
     margin-left: -1rem;
 }
 
@@ -1132,7 +1132,7 @@ body.dark-mode {
 }
 
 
-/**************************** CONTACT SECTION **************************/
+/**************************** Contact Section **************************/
 .contact__container {
     row-gap: 3.5rem;
 }
@@ -1352,7 +1352,7 @@ body.dark-mode {
 }
 
 
-/******************************** FOOTER  ******************************/
+/******************************** Footer ******************************/
 .footer__container {
     padding: 3rem 0 7rem; 
     text-align: center;
@@ -1430,7 +1430,7 @@ body.dark-mode {
 }
 
 
-/************************** SCROLL BAR SETTINGS ********************************/
+/************************** Scroll bar settings ********************************/
 /* Scroll bar */ 
 ::-webkit-scrollbar {
     width: .6rem;
@@ -1479,7 +1479,7 @@ body.dark-mode {
     bottom: 7rem;
 }
 
-/************************* RESPONSIVE SETTINS **************************/
+/************************* Responsive settings **************************/
 /***************** smallest devices (iPhone5/SE series) ****************/
 @media screen and (max-width: 340px) {
     .container {
@@ -1604,12 +1604,11 @@ body.dark-mode {
     .credentials__info {
         gap: .5rem;
     }
-    .credentials__info-left {
+    .credentials__data:nth-child(1) {
         margin-left: .5rem;
-        /* padding-left: 1rem; */
     }
-    .credentials__info-right {
-        margin-left: .25rem;
+    .credentials__data:nth-child(3) {
+        margin-left: .75rem;
     }
     .credentials__name {
         font-size: var(--small-font-size);
@@ -1766,11 +1765,10 @@ body.dark-mode {
     .credentials__info {
         column-gap: 0;
     }
-    .credentials__info-left {
+    .credentials__data:nth-child(1) {
         margin-left: .5rem;
-        /* padding-right: 1rem; */
     }
-    .credentials__info-right {
+    .credentials__data:nth-child(3) {
         margin-left: 1.25rem;
     }
     .credentials__name {
@@ -1887,10 +1885,10 @@ body.dark-mode {
     .credentials__button i {
         font-size: var(--h3-font-size);
     }
-    .credentials__info-left {
+    .credentials__data:nth-child(1) {
         margin-left: .75rem;
     }
-    .credentials__info-right {
+    .credentials__data:nth-child(3) {
         margin-left: 1.5rem;
     }
     .credentials__name {
@@ -1954,9 +1952,9 @@ body.dark-mode {
         margin-bottom: 1rem;
     }
 
-    /* .credentials__info-left {
-        margin-left: 0;
-    } */
+    .credentials__data:nth-child(1) {
+        margin-left: 0.25rem;
+    }
 
     .footer__copyright {
         display: flex;
@@ -2042,10 +2040,10 @@ body.dark-mode {
         font-size: var(--h2-font-size);
         margin-bottom: 1rem;
     }
-    /* .credentials__info-left {
-        margin-left: .75rem;
-    } */
-    .credentials__info-right {
+    .credentials__data:nth-child(1) {
+        margin-left: 1rem;
+    }
+    .credentials__data:nth-child(3) {
         margin-left: 2rem;
     }
     .credentials__name {
@@ -2146,11 +2144,11 @@ body.dark-mode {
     .credentials__info {
         column-gap: 1.25rem;
     }
-    .credentials__info-left {
-        margin-left: 5rem;
+    .credentials__data:nth-child(1) {
+        margin-left: 4.5rem;
     }
-    .credentials__info-right {
-        margin-left: 3rem;
+    .credentials__data:nth-child(3) {
+        margin-left: 2.5rem;
     }
 
     .contact__container {
@@ -2191,6 +2189,13 @@ body.dark-mode {
     .service__card:hover svg {
         margin-top: -10rem; 
         margin-bottom: 1.5rem;
+    }
+
+    .credentials__data:nth-child(1) {
+        margin-left: 10rem;
+    }
+    .credentials__data:nth-child(3) {
+        margin-left: 3rem;
     }
 }
 
@@ -2276,10 +2281,10 @@ body.dark-mode {
     .download-button-container {
         margin-right: -8rem;
     }
-    #home__info-left {
+    .home__info:nth-child(2) {
         margin-left: .5rem;
     }
-    #home__info-right {
+    .home__info:nth-child(3) {
         margin-right: .75rem;
     }
 
@@ -2358,10 +2363,10 @@ body.dark-mode {
     #career-button {
         padding-right: 2rem;
     }
-    .credentials__info-left {
+    .credentials__data:nth-child(1) {
         margin-left: 11rem;
     }
-    .credentials__info-right {
+    .credentials__data:nth-child(3) {
         margin-left: 3.5rem;
     }
     .credentials__name {
@@ -2530,10 +2535,10 @@ body.dark-mode {
     .credentials__info {
         column-gap: 1.5rem;
     }
-    .credentials__info-left {
+    .credentials__data:nth-child(1) {
         margin-left: 9rem;
     }
-    .credentials__info-right {
+    .credentials__data:nth-child(3) {
         margin-left: 4.5rem;
     }
     .credentials__name {
