--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -398,7 +398,8 @@ body.dark-mode {
     border-radius: 55px;
     border-top-right-radius: 100%;
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.349) 0%, rgba(255, 255, 255, 0.815) 100%);
-    backdrop-filter: blur(5px); 
+    -webkit-backdrop-filter: blur(5px); /* Safari 9+ and Safari on iOS 9+ */
+    backdrop-filter: blur(5px);
     transform: translate3d(0px, 0px, 25px);
     border-left: 1px solid #fff;
     border-bottom: 1px solid #fff;
@@ -437,6 +438,7 @@ body.dark-mode {
     top: 0;
     right: 0;
     box-shadow: rgba(100, 100, 111, 0.2) -10px 10px 20px 0px;
+    -webkit-backdrop-filter: blur(5px); /* Safari 9+ and Safari on iOS 9+ */
     backdrop-filter: blur(5px);
     background: var(--circle-color);
     transition: all 0.5s ease-in-out;
@@ -453,6 +455,7 @@ body.dark-mode {
     transform: translate3d(0, 0, 40px);
     top: 10px;
     right: 10px;
+    -webkit-backdrop-filter: blur(1px); /* Safari 9+ and Safari on iOS 9+ */
     backdrop-filter: blur(1px);
     transition-delay: 0.4s;
     opacity: 0;
@@ -547,6 +550,7 @@ body.dark-mode {
     border-right: 1px solid rgba(255, 255, 255, 0.2);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 5px 45px rgba(0, 0, 0, 0.3);
+    -webkit-backdrop-filter: blur(2px); /* Safari 9+ and Safari on iOS 9+ */
     backdrop-filter: blur(2px);
     transition: 0.5s;
     overflow: hidden;
@@ -1370,13 +1374,13 @@ body.dark-mode {
     column-gap: 2.5rem;
 }
 
-.footer__list, 
-.footer__social {
+.footer__list-item, 
+.footer__social-item {
     display: flex;
     justify-content: center;
 }
 
-.footer__list {
+.footer__list-item {
     margin: 2.5rem 0; 
     column-gap: 2rem;
     font-weight: var(--font-medium);
@@ -1391,7 +1395,7 @@ body.dark-mode {
     text-decoration: underline;
 }
 
-.footer__social {
+.footer__social-item {
     column-gap: 1.5rem;
 }
 
@@ -1640,9 +1644,9 @@ body.dark-mode {
     .footer__subtitle {
         font-size: var(--middle-font-size);
         grid-template-columns: auto;
-        margin-bottom: 3rem;
+        margin-bottom: 2rem;
     }
-    .footer__list {
+    .footer__list-item {
         column-gap: 1.5rem;
         margin-bottom: 3.5rem;
     }
@@ -1797,12 +1801,12 @@ body.dark-mode {
     .footer__subtitle {
         font-size: var(--middle-font-size);
         grid-template-columns: auto;
-        margin-bottom: 3rem;
+        margin-bottom: 2rem;
     }
-    .footer__list {
+    .footer__list-item {
         margin-bottom: 3.5rem;
     }
-    .footer__social {
+    .footer__social-item {
         column-gap: 2rem;
     }
     .footer__copyright {
@@ -1902,7 +1906,7 @@ body.dark-mode {
         font-size: var(--small-font-size);
     }
 
-    .footer__list {
+    .footer__list-item {
         column-gap: 2.5rem;
     }
 }
@@ -2100,11 +2104,14 @@ body.dark-mode {
         margin-top: 3.5rem;
     }
     
-    .footer__list {
+    .footer__subtitle {
+        margin-bottom: 1rem;
+    }
+    .footer__list-item {
         font-size: var(--h3-font-size);
         margin-top: 4rem;
     }
-    .footer__social {
+    .footer__social-item {
         column-gap: 2.5rem;
     }
     .footer__social-link i {
@@ -2197,7 +2204,7 @@ body.dark-mode {
         grid-template-columns: repeat(5, max-content);
         column-gap: 1.5rem;
     }
-    .footer__list {
+    .footer__list-item {
         column-gap: 3.5rem;
     }
 }
@@ -2438,7 +2445,7 @@ body.dark-mode {
         font-size: var(--middle-font-size);
         column-gap: 2rem;
     }
-    .footer__list {
+    .footer__list-item {
         font-size: var(--normal-font-size);
     }
     .footer__copyright {
@@ -2624,7 +2631,7 @@ body.dark-mode {
         margin-top: 2.75rem;
         column-gap: 2.5rem;
     }
-    .footer__list {
+    .footer__list-item {
         column-gap: 3rem; 
         margin: 4rem 0;
     }
