--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,7 +97,13 @@ body {
     transition: background-color .4s;
 
     /* light mode candidates */
-    background-image: linear-gradient(147deg, transparent 0%, transparent 8%,rgba(63, 106, 202,0.08) 8%, rgba(63, 106, 202,0.08) 46%,transparent 46%, transparent 100%),linear-gradient(107deg, transparent 0%, transparent 21%,rgba(63, 106, 202,0.08) 21%, rgba(63, 106, 202,0.08) 53%,transparent 53%, transparent 100%),linear-gradient(288deg, transparent 0%, transparent 35%,rgba(63, 106, 202,0.08) 35%, rgba(63, 106, 202,0.08) 91%,transparent 91%, transparent 100%),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
+    background-image: linear-gradient(147deg, transparent 0%, transparent 8%,
+    rgba(63, 106, 202, 0.08) 8%, rgba(63, 106, 202, 0.08) 46%, transparent 46%, 
+    transparent 100%), linear-gradient(107deg, transparent 0%, transparent 21%,
+    rgba(63, 106, 202,0.08) 21%, rgba(63, 106, 202,0.08) 53%,transparent 53%, 
+    transparent 100%), linear-gradient(288deg, transparent 0%, transparent 35%,
+    rgba(63, 106, 202,0.08) 35%, rgba(63, 106, 202,0.08) 91%, transparent 91%, 
+    transparent 100%), linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
 }
 
 h1, h2, h3 {
@@ -162,8 +168,40 @@ body.dark-mode {
     --credentials-button__active-color: hsl(265, 26%, 67%);
 
     /* dark mode cadidates */
-    background-image: linear-gradient(17deg, rgba(41, 41, 41, 0.02) 0%, rgba(41, 41, 41, 0.02) 48%,rgba(10, 10, 10, 0.02) 48%, rgba(10, 10, 10, 0.02) 59%,rgba(164, 164, 164, 0.02) 59%, rgba(164, 164, 164, 0.02) 73%,rgba(79, 79, 79, 0.02) 73%, rgba(79, 79, 79, 0.02) 93%,rgba(42, 42, 42, 0.02) 93%, rgba(42, 42, 42, 0.02) 100%),linear-gradient(42deg, rgba(124, 124, 124, 0.02) 0%, rgba(124, 124, 124, 0.02) 15%,rgba(116, 116, 116, 0.02) 15%, rgba(116, 116, 116, 0.02) 23%,rgba(41, 41, 41, 0.02) 23%, rgba(41, 41, 41, 0.02) 44%,rgba(196, 196, 196, 0.02) 44%, rgba(196, 196, 196, 0.02) 54%,rgba(145, 145, 145, 0.02) 54%, rgba(145, 145, 145, 0.02) 100%),linear-gradient(151deg, rgba(85, 85, 85, 0.02) 0%, rgba(85, 85, 85, 0.02) 12%,rgba(72, 72, 72, 0.02) 12%, rgba(72, 72, 72, 0.02) 28%,rgba(156, 156, 156, 0.02) 28%, rgba(156, 156, 156, 0.02) 33%,rgba(230, 230, 230, 0.02) 33%, rgba(230, 230, 230, 0.02) 50%,rgba(13, 13, 13, 0.02) 50%, rgba(13, 13, 13, 0.02) 100%),linear-gradient(76deg, rgba(25, 25, 25, 0.02) 0%, rgba(25, 25, 25, 0.02) 9%,rgba(183, 183, 183, 0.02) 9%, rgba(183, 183, 183, 0.02) 32%,rgba(19, 19, 19, 0.02) 32%, rgba(19, 19, 19, 0.02) 86%,rgba(129, 129, 129, 0.02) 86%, rgba(129, 129, 129, 0.02) 88%,rgba(174, 174, 174, 0.02) 88%, rgba(174, 174, 174, 0.02) 100%),linear-gradient(90deg, rgb(41, 41, 41),rgb(8, 8, 8));
-    /* background-image: linear-gradient(216deg, rgba(77, 77, 77,0.05) 0%, rgba(77, 77, 77,0.05) 25%,rgba(42, 42, 42,0.05) 25%, rgba(42, 42, 42,0.05) 38%,rgba(223, 223, 223,0.05) 38%, rgba(223, 223, 223,0.05) 75%,rgba(36, 36, 36,0.05) 75%, rgba(36, 36, 36,0.05) 100%),linear-gradient(44deg, rgba(128, 128, 128,0.05) 0%, rgba(128, 128, 128,0.05) 34%,rgba(212, 212, 212,0.05) 34%, rgba(212, 212, 212,0.05) 57%,rgba(25, 25, 25,0.05) 57%, rgba(25, 25, 25,0.05) 89%,rgba(135, 135, 135,0.05) 89%, rgba(135, 135, 135,0.05) 100%),linear-gradient(241deg, rgba(55, 55, 55,0.05) 0%, rgba(55, 55, 55,0.05) 14%,rgba(209, 209, 209,0.05) 14%, rgba(209, 209, 209,0.05) 60%,rgba(245, 245, 245,0.05) 60%, rgba(245, 245, 245,0.05) 69%,rgba(164, 164, 164,0.05) 69%, rgba(164, 164, 164,0.05) 100%),linear-gradient(249deg, rgba(248, 248, 248,0.05) 0%, rgba(248, 248, 248,0.05) 32%,rgba(148, 148, 148,0.05) 32%, rgba(148, 148, 148,0.05) 35%,rgba(202, 202, 202,0.05) 35%, rgba(202, 202, 202,0.05) 51%,rgba(181, 181, 181,0.05) 51%, rgba(181, 181, 181,0.05) 100%),linear-gradient(92deg, rgb(0,0,0),rgb(0,0,0)); */
+    /* background-image: linear-gradient(17deg, rgba(41, 41, 41, 0.02) 0%, rgba(41, 41, 41, 0.02) 48%,
+    rgba(10, 10, 10, 0.02) 48%, rgba(10, 10, 10, 0.02) 59%,rgba(164, 164, 164, 0.02) 59%, 
+    rgba(164, 164, 164, 0.02) 73%, rgba(79, 79, 79, 0.02) 73%, rgba(79, 79, 79, 0.02) 93%,
+    rgba(42, 42, 42, 0.02) 93%, rgba(42, 42, 42, 0.02) 100%), 
+    linear-gradient(42deg, rgba(124, 124, 124, 0.02) 0%, rgba(124, 124, 124, 0.02) 15%,
+    rgba(116, 116, 116, 0.02) 15%, rgba(116, 116, 116, 0.02) 23%, rgba(41, 41, 41, 0.02) 23%, 
+    rgba(41, 41, 41, 0.02) 44%, rgba(196, 196, 196, 0.02) 44%, rgba(196, 196, 196, 0.02) 54%,
+    rgba(145, 145, 145, 0.02) 54%, rgba(145, 145, 145, 0.02) 100%), 
+    linear-gradient(151deg, rgba(85, 85, 85, 0.02) 0%, rgba(85, 85, 85, 0.02) 12%,
+    rgba(72, 72, 72, 0.02) 12%, rgba(72, 72, 72, 0.02) 28%, rgba(156, 156, 156, 0.02) 28%, 
+    rgba(156, 156, 156, 0.02) 33%, rgba(230, 230, 230, 0.02) 33%, rgba(230, 230, 230, 0.02) 50%,
+    rgba(13, 13, 13, 0.02) 50%, rgba(13, 13, 13, 0.02) 100%), 
+    linear-gradient(76deg, rgba(25, 25, 25, 0.02) 0%, rgba(25, 25, 25, 0.02) 9%, 
+    rgba(183, 183, 183, 0.02) 9%, rgba(183, 183, 183, 0.02) 32%, rgba(19, 19, 19, 0.02) 32%, 
+    rgba(19, 19, 19, 0.02) 86%,rgba(129, 129, 129, 0.02) 86%, rgba(129, 129, 129, 0.02) 88%,
+    rgba(174, 174, 174, 0.02) 88%, rgba(174, 174, 174, 0.02) 100%), 
+    linear-gradient(90deg, rgb(41, 41, 41),rgb(8, 8, 8)); */
+
+    background-image: linear-gradient(216deg, rgba(77, 77, 77,0.05) 0%, 
+    rgba(77, 77, 77, 0.05) 25%,rgba(42, 42, 42, 0.05) 25%, rgba(42, 42, 42,0.05) 38%,
+    rgba(223, 223, 223, 0.05) 38%, rgba(223, 223, 223, 0.05) 75%,
+    rgba(36, 36, 36, 0.05) 75%, rgba(36, 36, 36, 0.05) 100%), 
+    linear-gradient(44deg, rgba(128, 128, 128, 0.05) 0%, rgba(128, 128, 128, 0.05) 34%,
+    rgba(212, 212, 212, 0.05) 34%, rgba(212, 212, 212, 0.05) 57%,
+    rgba(25, 25, 25, 0.05) 57%, rgba(25, 25, 25, 0.05) 89%,rgba(135, 135, 135, 0.05) 89%,
+    rgba(135, 135, 135, 0.05) 100%), linear-gradient(241deg, rgba(55, 55, 55, 0.05) 0%,
+    rgba(55, 55, 55, 0.05) 14%, rgba(209, 209, 209, 0.05) 14%, 
+    rgba(209, 209, 209, 0.05) 60%, rgba(245, 245, 245, 0.05) 60%, 
+    rgba(245, 245, 245, 0.05) 69%, rgba(164, 164, 164, 0.05) 69%, 
+    rgba(164, 164, 164, 0.05) 100%), linear-gradient(249deg, rgba(248, 248, 248, 0.05) 0%, 
+    rgba(248, 248, 248, 0.05) 32%, rgba(148, 148, 148, 0.05) 32%, 
+    rgba(148, 148, 148, 0.05) 35%,rgba(202, 202, 202, 0.05) 35%, 
+    rgba(202, 202, 202, 0.05) 51%,rgba(181, 181, 181, 0.05) 51%, 
+    rgba(181, 181, 181, 0.05) 100%), linear-gradient(92deg, rgb(0,0,0), rgb(0,0,0));
 }
 
 /* Color changes in some parts of the websites, in light mode */
@@ -676,6 +714,7 @@ body.dark-mode {
     padding: 1rem 1rem .5rem 1rem;
     border-radius: 2rem;
     margin: 0 -1rem -3rem 0;
+    cursor: pointer;
 }
 .download-button-container:hover {
     transform: translate3d(0, 0, 15px);
@@ -880,7 +919,6 @@ body.dark-mode {
     border: 1px solid var(--border-color-light);
     place-items: center; 
     margin-bottom: 1rem;
-    transition: background-color .4s;  /* For dark mode animation */
     cursor: pointer;
 }
 
@@ -945,7 +983,6 @@ body.dark-mode {
     padding: 3.5rem 1rem; 
     border-radius: 1.5rem;
     border: 1px solid var(--border-color-light);
-    transition: background-color .4s;  /* For dark mode animation */
     cursor: pointer;
 }
 
@@ -1410,15 +1447,15 @@ body.dark-mode {
     transition: transform .3s;
 }
 
-.fa-linkedin:hover {
+.fa-linkedin-in:hover {
     color: var(--linkedin-color);
 }
 
-.fa-square-github:hover {
+.fa-github:hover {
     color: var(--github-color2);
 }
 
-.bi-discord:hover {
+.fa-discord:hover {
     color: var(--discord-color);
 }
 
