--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -767,6 +767,7 @@ body.dark-mode {
     text-decoration: none; 
     -webkit-text-decoration: none; /* to remove underline on Google Chrome, especially on iOS devices */
     -webkit-text-fill-color: var(--title-color);  /* to remain the desired text color on iOS devices */
+    -webkit-user-modify: read-write-plaintext-only;
 }
 
 .home__info-description i {
@@ -1224,6 +1225,7 @@ body.dark-mode {
     -webkit-text-fill-color: var(--title-color);  /* to remain the desired text color on iOS devices */
     text-decoration: none; 
     -webkit-text-decoration: none; /* to remove underline on Google Chrome, especially on iOS devices */
+    -webkit-user-modify: read-write-plaintext-only;
 }
 
 .contact__button {
