Revert "Update styles.css"
This reverts commit b4e190aeb8bbd691e96c32db34676bf0bb090fb0.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -764,8 +764,8 @@ body.dark-mode {
 }
 
 .home__info-description {
-    text-decoration: none !important;
-    -webkit-text-decoration: none !important; /* to remove underline on Google Chrome, especially on iOS devices */
+    text-decoration: none; 
+    -webkit-text-decoration: none; /* to remove underline on Google Chrome, especially on iOS devices */
     -webkit-text-fill-color: var(--title-color);  /* to remain the desired text color on iOS devices */
     -webkit-user-modify: read-write-plaintext-only;
 }
@@ -1223,8 +1223,8 @@ body.dark-mode {
     font-family: var(--tiny-font); 
     color: var(--title-color);
     -webkit-text-fill-color: var(--title-color);  /* to remain the desired text color on iOS devices */
-    text-decoration: none !important; 
-    -webkit-text-decoration: none !important; /* to remove underline on Google Chrome, especially on iOS devices */
+    text-decoration: none; 
+    -webkit-text-decoration: none; /* to remove underline on Google Chrome, especially on iOS devices */
     -webkit-user-modify: read-write-plaintext-only;
 }
 
