--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -764,10 +764,10 @@ body.dark-mode {
 }
 
 .home__info-description {
+    -webkit-text-fill-color: var(--title-color);  /* to remain the desired text color on iOS devices */
     text-decoration: none; 
     -webkit-text-decoration: none; /* to remove underline on Google Chrome, especially on iOS devices */
-    -webkit-text-fill-color: var(--title-color);  /* to remain the desired text color on iOS devices */
-    -webkit-user-modify: read-write-plaintext-only;
+    -webkit-touch-callout: none;
 }
 
 .home__info-description i {
@@ -1225,7 +1225,7 @@ body.dark-mode {
     -webkit-text-fill-color: var(--title-color);  /* to remain the desired text color on iOS devices */
     text-decoration: none; 
     -webkit-text-decoration: none; /* to remove underline on Google Chrome, especially on iOS devices */
-    -webkit-user-modify: read-write-plaintext-only;
+    -webkit-touch-callout: none;
 }
 
 .contact__button {
