--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -761,6 +761,7 @@ body.dark-mode {
     font-family: var(--title-font); 
     -webkit-text-fill-color: var(--title-color);  /* to remain the desired text color on iOS devices */
     color: var(--title-color);
+    -webkit-text-decoration-skip: none; /* to remove underline on Google Chrome, especially on iOS devices */
     text-decoration: none; 
 }
 
@@ -1219,11 +1220,8 @@ body.dark-mode {
     font-family: var(--tiny-font); 
     -webkit-text-fill-color: var(--title-color);  /* to remain the desired text color on iOS devices */
     color: var(--title-color);
-}
-
-a[href^="mailto:"], a[href^="tel:"], .contact__data-info {
-    -webkit-text-decoration: none;
-    text-decoration: none;
+    -webkit-text-decoration-skip: none; /* to remove underline on Google Chrome, especially on iOS devices */
+    text-decoration: none; 
 }
 
 .contact__button {
