--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1226,12 +1226,11 @@ body.dark-mode {
 
 .contact__button {
     width: max-content; 
-    display: grid;
+    display: inline-flex; 
     align-items: center; 
     column-gap: .5rem;
     color: var(--title-color); 
     font-size: var(--small-font-size);
-    grid-template-columns: max-content(1); 
 }
 
 .contact__button i {
@@ -1239,11 +1238,11 @@ body.dark-mode {
     transition: transform .3s;
 }
 
-.contact__button:hover .bi-feather {
+.contact__button:hover i {
     transform: translateX(.25rem);
 }
 
-.contact__button:hover .reachout {
+.contact__button:hover span {
     text-decoration: underline;
 }
 
