--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1220,7 +1220,7 @@ body.dark-mode {
     font-family: var(--tiny-font); 
     -webkit-text-fill-color: var(--title-color);  /* to remain the desired text color on iOS devices */
     color: var(--title-color);
-    -webkit-text-decoration-skip: none; /* to remove underline on Google Chrome, especially on iOS devices */
+    -webkit-text-decoration-skip: objects; /* to remove underline on Google Chrome, especially on iOS devices */
     text-decoration: none; 
 }
 
