--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1224,6 +1224,11 @@ body.dark-mode {
     text-decoration: none; 
 }
 
+.contact__data-info a {
+    -webkit-text-decoration-skip: none; /* to remove underline on Google Chrome, especially on iOS devices */
+    text-decoration: none;
+}
+
 .contact__button {
     width: max-content; 
     display: inline-flex; 
