--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1248,7 +1248,7 @@ body.dark-mode {
 }
 
 .contact__button:hover span {
-    /* text-decoration: underline; */
+    text-decoration: underline;
 }
 
 /* Download CV button */
