--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1364,6 +1364,7 @@ body.dark-mode {
 
 .contact__form .contact__submit-button {
     width: max-content; 
+    display: inline-block; 
     border: none; 
     background: none; 
     font-size: var(--h2-font-size); 
