--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1362,8 +1362,9 @@ body.dark-mode {
     resize: none;
 }
 
-.contact__form .contact__submit-button {
-    width: max-content; 
+.contact__form button {
+    /* width: max-content; */
+    display: inline-flex; 
     border: none; 
     background: none; 
     font-size: var(--h2-font-size); 
@@ -1374,9 +1375,16 @@ body.dark-mode {
     margin-top: .75rem;
 }
 
-.contact__form .contact__submit-button i {
+.contact__form button i {
     font-size: 1.5rem; 
     font-weight: initial;
+    margin-top: .15rem;
+    margin-left: .5rem;
+    transition: transform .3s;
+}
+
+.contact__form button:hover i {
+    transform: translateX(.25rem);
 }
 
 .contact__status {
