Revert "temp test"
This reverts commit be537bd115ef914dbec56df5e87edaab9396ed8b.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1212,7 +1212,7 @@ body.dark-mode {
 }
 
 .contact__link {
-    width: max-content; 
+    /* width: max-content;  */
     display: inline-block; 
     color: var(--title-color); 
     font-size: var(--small-font-size);
