--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1369,6 +1369,8 @@ body.dark-mode {
 }
 
 .contact__form .contact__submit-button {
+    width: max-content; 
+    display: inline-block; 
     border: none; 
     background: none; 
     font-size: var(--h2-font-size); 
@@ -1380,6 +1382,8 @@ body.dark-mode {
 }
 
 .contact__form .contact__submit-button i {
+    /* width: max-content; 
+    display: inline-block; */
     font-size: 1.5rem; 
     font-weight: initial;
 }
