--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1215,7 +1215,7 @@ body.dark-mode {
     margin-right: .5rem;
 }
 
-.contact__link {
+.contact__button {
     width: max-content; 
     display: inline-block; 
     /* align-items: center;  */
@@ -1243,12 +1243,12 @@ body.dark-mode {
     margin-left: .5rem;
 }
 
-.contact__link:hover i {
+.contact__button:hover i {
     transform: translateX(.25rem);
     transition: transform .3s;
 }
 
-.contact__link:hover .contact__data-text {
+.contact__button:hover .contact__data-text {
     text-decoration: underline;
 }
 
@@ -1368,9 +1368,7 @@ body.dark-mode {
     resize: none;
 }
 
-.contact__form .contact__submit-button {
-    width: max-content; 
-    display: inline-block; 
+.contact__form .contact__button {
     border: none; 
     background: none; 
     font-size: var(--h2-font-size); 
@@ -1381,9 +1379,7 @@ body.dark-mode {
     margin-top: .75rem;
 }
 
-.contact__form .contact__submit-button i {
-    width: max-content; 
-    display: inline-block;
+.contact__form .contact__button i {
     font-size: 1.5rem; 
     font-weight: initial;
 }
