--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1364,7 +1364,7 @@ body.dark-mode {
     resize: none;
 }
 
-.contact__form .contact__button {
+.contact__form button {
     border: none; 
     background: none; 
     font-size: var(--h2-font-size); 
@@ -1373,9 +1373,10 @@ body.dark-mode {
     cursor: pointer; 
     outline: none; 
     margin-top: .75rem;
+    width: max-content;
 }
 
-.contact__form .contact__button i {
+.contact__form button i {
     font-size: 1.5rem; 
     font-weight: initial;
 }
