--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1373,12 +1373,13 @@ body.dark-mode {
     cursor: pointer; 
     outline: none; 
     margin-top: .75rem;
-    width: max-content;
+    display: flex;
 }
 
 .contact__form button i {
     font-size: 1.5rem; 
     font-weight: initial;
+    display: flex;
 }
 
 .contact__status {
