Revert "temp test"
This reverts commit c77a00dfb1092d404fd46487cbc8294d3ac819b5.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1373,13 +1373,12 @@ body.dark-mode {
     cursor: pointer; 
     outline: none; 
     margin-top: .75rem;
-    display: flex;
+    width: max-content;
 }
 
 .contact__form button i {
     font-size: 1.5rem; 
     font-weight: initial;
-    display: flex;
 }
 
 .contact__status {
