--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1374,6 +1374,7 @@ body.dark-mode {
     outline: none; 
     margin-top: .75rem;
     width: max-content;
+    display: inline-block;
 }
 
 .contact__form button i {
