Revert "temp test"
This reverts commit 84f0b252dbeb3b50e1a09e53a2e6723d3a7450b0.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1374,7 +1374,7 @@ body.dark-mode {
     outline: none; 
     margin-top: .75rem;
     width: max-content;
-    display: inline-block;
+    display: inline-flex;
     align-items: center;
     column-gap: .5rem;
 }
